# ExpenseChi

./: CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: DashboardCard.qml  EmptyState.qml  FiltersBar.qml  Snackbar.qml  TransactionDelegate.qml  TransactionDialog.qml
src/: AppController.cpp  AppController.h  main.cpp
src/db/: Database.cpp  Database.h
src/models/: TransactionsModel.cpp  TransactionsModel.h
